# AgenticAIBot

./: README.md  agent_flask_new.py  agentic_flask.py  basic_agent.py  main.py  model_integration.py  model_with_structured_output.py  pyproject.toml  requirement.txt  tool_calling.py
app/: main.py
app/agent_contexts/: agent_context.py
app/agent_states/: agent_state.py
app/app_tools/: tool.py
app/constants/: constant.py
app/hooks/: hook.py
app/prompts/: prompt.py
app/rag/: generate_vector_db.py
app/rag/vector_db/bus_booking_policy/: index.faiss  index.pkl
app/test/: descriptions.txt  results_as34dfg.txt
examples/: messages_in_model.py
tmp/: agentic_flask.py
