[project]
name = "agenticaibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.1",
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "flask-limiter>=4.1.1",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
]
